# cs2-fps-benchmark

./: .gitignore  README.md  bench.cfg  generate.js  package-lock.json  template.cfg
benchmark/: .gitignore  package.json  pnpm-lock.yaml  run.cmd  template.cfg  tsconfig.json
benchmark/config/: anc-v1.yaml  inf-v1.yaml
benchmark/src/: main.js
config/: anc-v1.json  inf-v1.json
src-benchmark/: package-lock.json
tool/: package.json  pnpm-lock.yaml
tool/src-tauri/: Cargo.toml  tauri.conf.json
web/: .prettierrc  Dockerfile  README.md  build.bat  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: _app.tsx  globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/test/: page.tsx
web/components/window/: Footer.tsx  Nav.tsx
